--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dripfy MIS Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        darkMode: 'class',
+      }
+    </script>
   <script type="importmap">
 {
   "imports": {
@@ -17,8 +22,49 @@
   }
 }
 </script>
+<style>
+  .brand-glow {
+    text-shadow: 0 0 8px rgba(50, 255, 132, 0.4), 0 0 20px rgba(50, 255, 132, 0.3);
+  }
+  @keyframes slide-in-up {
+    from {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  @keyframes fade-in-up {
+      from {
+          opacity: 0;
+          transform: translateY(10px);
+      }
+      to {
+          opacity: 1;
+          transform: translateY(0);
+      }
+  }
+  @keyframes fade-in {
+      from { opacity: 0; }
+      to { opacity: 1; }
+  }
+  .animate-slide-in-up {
+    animation: slide-in-up 0.5s ease-out forwards;
+    opacity: 0;
+  }
+  .animate-fade-in-up {
+      animation: fade-in-up 0.3s ease-out forwards;
+      opacity: 0;
+  }
+  .animate-fade-in {
+      animation: fade-in 0.4s ease-out forwards;
+      opacity: 0;
+  }
+</style>
 </head>
-  <body class="bg-neutral-900 text-neutral-200">
+  <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
